2005-07-01  Gabor Melis  <mega@hotpop.com>

	* swank-sbcl.lisp (threaded stuff): make SBCL 0.9.2.9+ work while
	retaining support for 0.9.2

2005-06-28  Gabor Melis <mega@hotpop.com>

	* swank-sbcl.lisp (threaded stuff): horrible hack to make threaded
	SBCL 0.9.2 work.  (also, Happy Birthday Christophe!)

2005-06-21  Edi Weitz  <edi@agharta.de>

	* swank.lisp (find-matching-packages): Also use nicknames.

2005-06-13  Edi Weitz  <edi@agharta.de>

	* swank.lisp (list-all-systems-in-central-registry): Delete
	duplicates.

	* swank-lispworks.lisp (unmangle-unfun): If you rename a package
	you should rename it everywhere...

2005-06-12  Alexey Dejneka  <adejneka@comail.ru>

	* slime.el (slime-with-xref-buffer): fix "pgk" typo.

2005-06-12  Christophe Rhodes  <csr21@cam.ac.uk>

	* swank.lisp (ed-in-emacs): allow strings as well as pathnames;
	don't call emacs for things that the emacs editor doesn't know how
	to deal with.  Return T if we called emacs and NIL if not.

	* slime.el (slime-ed): Change a listp to consp, so that NIL
	arguments are correctly handled.

2005-06-11  Nikodemus Siivola <nikodemus@random-state.net>

	* swank-sbcl.lisp: Patched for SBCL HEAD: utilize the new
	:source-plist functionality; maintain compatibility with 0.9.1
	till 0.9.2 is out. Removed cruft left over from previous
	excercises in supporting both HEAD and latest release.

	* doc/slime.texi: Document Slime as supporting the latest official
	release of SBCL, as opposed to a specific version number which
	would need to be updated monthly.

2005-06-10  Helmut Eller  <heller@common-lisp.net>

	* nregex.lisp (slime-nregex): Rename package to avoid name clashes
	with other version of this file.

	* swank.lisp (compiled-regex): Use the new package name.

	* slime.el (slime-with-xref-buffer): Gensym package too, to avoid
	problems when switching to buffers with -*- package: ... -*- file
	variables.  From Antonio Menezes Leitao.
	(slime-property-bounds): Use the prop argument instead of the